ready for jcenter